--- a/domstart/index.html
+++ b/domstart/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <script>
-      console.log(document.body)
+      console.log(document.body);
     </script>
   </head>
   <body>
@@ -21,7 +21,11 @@
       <p id="tagline">
         Bonjour
       </p>
-      <button type="button" class="btn btn-outline-light btn-sm" aria-label="change le header">
+      <button
+        type="button"
+        class="btn btn-outline-light btn-sm"
+        aria-label="change le header"
+      >
         <svg
           width="1em"
           height="1em"
@@ -92,8 +96,8 @@
       </button>
     </main>
     <script>
-      console.log(document.body)
-      console.dir(document.body)
+      console.log(document.body);
+      console.dir(document.body);
     </script>
     <script src="js/script.js"></script>
   </body>
