domstart completed nok

--- a/domstart/index.html
+++ b/domstart/index.html
@@ -58,7 +58,7 @@
           disparais en click ;)
         </p>
         <button id="pub-btn" type="button" class="btn btn-outline-light btn-sm">
-          x
+          Fermer le panneau
         </button>
       </div>
       <article class="bg-warning p-2 p-sm-3 p-md-4 p-lg-5 mb-4">
@@ -92,7 +92,7 @@
         </ul>
       </article>
       <button id="info-btn" type="button" class="btn btn-dark mb-5">
-        Information sur cette page.
+        Information sur cette page
       </button>
     </main>
     <script>
